CMAKE_MINIMUM_REQUIRED(VERSION 3.25)
SET(CMAKE_INSTALL_PREFIX "output" CACHE PATH "Installation directory")
set(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_CXX_STANDARD 17)

if(TARGET_PLATFORM STREQUAL "iOS")
    SET(CMAKE_SYSTEM_NAME "iOS")
    SET(CMAKE_OSX_ARCHITECTURES "arm64")
    SET(CMAKE_OSX_DEPLOYMENT_TARGET "12.0")
    SET(CMAKE_XCODE_ATTRIBUTE_ONLY_ACTIVE_ARCH "NO")
    SET(CMAKE_IOS_INSTALL_COMBINED "YES")

elseif(TARGET_PLATFORM STREQUAL "Darwin")
    SET(CMAKE_SYSTEM_NAME "Darwin")
    SET(CMAKE_OSX_ARCHITECTURES "x86_64;arm64")
    SET(CMAKE_OSX_DEPLOYMENT_TARGET "12.0")

elseif(TARGET_PLATFORM STREQUAL "Win32")
    SET(CMAKE_SYSTEM_NAME "Windows")
    SET(CMAKE_SYSTEM_PROCESSOR "x86")

elseif(TARGET_PLATFORM STREQUAL "Win64")
    SET(CMAKE_SYSTEM_NAME "Windows")
    SET(CMAKE_SYSTEM_PROCESSOR "x86_64")
    
else()
    message(FATAL_ERROR "Please use -DTARGET_PLATFORM to specify the platform\nSupport platforms: iOS Darwin Win32 Win64")

endif()

PROJECT(PIP CXX)
ADD_SUBDIRECTORY(pip)