FILE(GLOB_RECURSE SRC "*.cpp")
FILE(GLOB SRC_HEADERS "*.h")
FILE(GLOB SRC_PROTOCOL_HEADERS "protocol/*.h")

ADD_LIBRARY(pip SHARED ${SRC})

INSTALL(TARGETS pip DESTINATION lib)
INSTALL(FILES ${SRC_HEADERS} DESTINATION include)
INSTALL(FILES ${SRC_PROTOCOL_HEADERS} DESTINATION include/protocol)

SET_TARGET_PROPERTIES(pip PROPERTIES LINKER_LANGUAGE CXX)